# texioty

./: .gitignore  README.md  digiary.py  main.py  prompt_runner.py  pyproject.toml  requirements.txt  settings.py  setup.cfg  spell_depicter.py  tex_helper.py  texioty.py  texity.py  texoty.py  theme.py  tkHyperLinkManager.py  utils.py
filesInput/foto_worx/worx_profiles/: extruders.json
filesInput/tcg_lab/: digimons.json  lorcanas.json  magics.json  pokemons.json
gaims/: base_gaim.py  boston_trail.py  candy_slinger.py  casino.py  gaim_registry.py  gaim_runner.py  hangman.py
helpers/: api_helper.py  arc_api.py  cooper.py  dbHelper.py  digiary.py  dovecote.py  foto_worx.py  gaim_registry.py  kan_wallet.py  kanisa_wallet.py  pijun.py  pijun_coop.py  pijun_cooper.py  prompt_registry.py  prompt_runner.py  registry_manager.py  spell_depicter.py  tex_helper.py
helpers/apis/: api_helper.py  arc_api.py  base_tcg_api.py  digimon_api.py  immutable_api.py  lorcana_api.py  lyrical_api.py  mtg_api.py  os_rs_api.py  poketcg_api.py  yugioh_api.py
helpers/gaims/: base_gaim.py  boston_trail.py  candy_slinger.py  casino.py  hangman.py  wordsearch.py
helpers/promptaires/: foto_worx.py  profilizer.py  prompt_helper.py  tcg_labby.py
helpers/registries/: api_registry.py  base_registry.py  command_builder.py  command_definitions.py  command_registry.py  gaim_registry.py  help_registry.py  prompt_registry.py
question_prompts/: foto_worx.py  profilizer.py  tcg_labby.py
settings/: alphanumers.py  konfig.py  themery.py  utils.py
src/texioty/: __main__.py
(+123 files in other folders)
