[metadata]
name = texioty
version = 0.1.0
description = Text based GUI as a CLI.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bluebeard22
author_email = this.robe@gmail.com
license = MIT
url = https://kanisa-project.github.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >= 3.12
install_requires =
    numpy
    Pillow
    requests
    mtgsdk

[options.package_data]
* = *.txt, *.md

[bdist_wheel]
universal = 1